@startuml
title -DIAGRAMA DE CLASES SADAT: ROL EMPRESA INTEGRAL-

class MicroempresaIntegral {
  -id: Integer
  -nombre_empresa: String
  -descripcion: Text
  -rut_empresa: String
  -imagen: String
  -estado: EstadoEmpresa
  +gestionarCatalogo()
  +gestionarPedidos()
  +gestionarProductos()
  +gestionarMateriasPrimas()
  +gestionarMaquinaria()
  +gestionarInventario()
  +generarReportes()
}

class CategoriaProducto {
  -id: Integer
  -nombre: String
  -descripcion: Text
}

class ProductoTerminado {
  -id: Integer
  -nombre: String
  -descripcion: Text
  -precio: Decimal
  -stock: Integer
  -imagen: String
  -categoria: CategoriaProducto
  +actualizarStock()
  +actualizarPrecio()
  +verificarDisponibilidad()
}

class Pedido {
  -id: Integer
  -cantidad: Integer
  -fecha_pedido: DateTime
  -fecha_entrega: Date
  -estado: EstadoPedido
  -total: Decimal
  +calcularTotal()
  +actualizarEstado()
}

class DetallePedido {
  -id: Integer
  -cantidad: Integer
  -precio_unitario: Decimal
  -subtotal: Decimal
  +calcularSubtotal()
}

class PedidoPersonalizado {
  -id: Integer
  -descripcion: Text
  -cantidad: Integer
  -fecha_solicitud: DateTime
  -estado: EstadoPedido
  -cotizacion: Decimal
  -fecha_entrega_estimada: Date
  -referencia_imagen: String
  +actualizarEstado()
  +registrarCotizacion()
}

class SolicitudConfeccion {
  -id: Integer
  -descripcion: Text
  -cantidad: Integer
  -fecha_solicitud: DateTime
  -estado: EstadoSolicitud
  -material_cliente: Boolean
  -detalles_material: Text
  +actualizarEstado()
  +registrarCotizacion()
}

class Notificacion {
  -id: Integer
  -titulo: String
  -mensaje: Text
  -fecha: DateTime
  -tipo: TipoNotificacion
  -leida: Boolean
  +marcarComoLeida()
  +enviar()
}

class Transaccion {
  -id: Integer
  -monto: Decimal
  -fecha: DateTime
  -estado: EstadoTransaccion
  -metodo_pago: String
  -descripcion: Text
  +procesarPago()
  +actualizarEstado()
  +generarComprobante()
}

class MateriaPrima {
  -id: Integer
  -nombre: String
  -descripcion: Text
  -cantidad: Decimal
  -unidad_medida: String
  -precio_unitario: Decimal
  -proveedor: String
  +actualizarStock()
  +verificarNivelMinimo()
  +generarAlerta()
}

class Maquinaria {
  -id: Integer
  -nombre: String
  -descripcion: Text
  -cantidad: Integer
  -estado: EstadoMaquina
  -fecha_adquisicion: Date
  -ultima_mantencion: Date
  +registrarMantenimiento()
  +actualizarEstado()
  +verificarDisponibilidad()
}

class Reporte {
  -id: Integer
  -titulo: String
  -contenido: Text
  -fecha_generacion: DateTime
  -tipo: TipoReporte
  +generarReporte()
  +exportarPDF()
}

MicroempresaIntegral "1" -- "*" ProductoTerminado
ProductoTerminado "*" -- "1" CategoriaProducto

MicroempresaIntegral "1" -- "*" Pedido
Pedido "1" -- "*" DetallePedido
DetallePedido "*" -- "1" ProductoTerminado

MicroempresaIntegral "1" -- "*" PedidoPersonalizado
SolicitudConfeccion "*" -- "0..1" MicroempresaIntegral

MicroempresaIntegral "1" -- "*" Notificacion
Notificacion "*" -- "*" Pedido
Notificacion "*" -- "*" SolicitudConfeccion

Pedido "1" -- "*" Transaccion
PedidoPersonalizado "1" -- "*" Transaccion
SolicitudConfeccion "1" -- "*" Transaccion

MicroempresaIntegral "1" -- "*" Reporte

@enduml